compiler/tests/snapshots/parse_success__call_with_parens_around_single_args.snap
---
source: compiler/tests/parse_success.rs
expression: multiply(1)by(2)
---

=== Source ===
multiply(1)by(2)

=== Tokens ===
[
    Identifier(
        0,
        8,
    ),
    LeftParen(
        8,
        9,
    ),
    DecimalDigits(
        9,
        10,
    ),
    RightParen(
        10,
        11,
    ),
    Identifier(
        11,
        13,
    ),
    LeftParen(
        13,
        14,
    ),
    DecimalDigits(
        14,
        15,
    ),
    RightParen(
        15,
        16,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        16,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                16,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        16,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                0,
                                16,
                            ),
                            callee: ExprNode {
                                pos: (
                                    0,
                                    13,
                                ),
                                kind: MultiPartIdentifier(
                                    [
                                        IdentifierNode {
                                            pos: (
                                                0,
                                                8,
                                            ),
                                            name: "multiply",
                                        },
                                        IdentifierNode {
                                            pos: (
                                                11,
                                                13,
                                            ),
                                            name: "by",
                                        },
                                    ],
                                ),
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        8,
                                        11,
                                    ),
                                    kind: Grouping(
                                        ExprNode {
                                            pos: (
                                                9,
                                                10,
                                            ),
                                            kind: Literal(
                                                LiteralNode {
                                                    pos: (
                                                        9,
                                                        10,
                                                    ),
                                                    kind: IntDecimal(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        13,
                                        16,
                                    ),
                                    kind: Grouping(
                                        ExprNode {
                                            pos: (
                                                14,
                                                15,
                                            ),
                                            kind: Literal(
                                                LiteralNode {
                                                    pos: (
                                                        14,
                                                        15,
                                                    ),
                                                    kind: IntDecimal(
                                                        2,
                                                    ),
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

